Fixed a scrollbar issue discovered on staging

--- a/src/routes/AuthLayoutRouter/components/Navigation/Navigation.scss
+++ b/src/routes/AuthLayoutRouter/components/Navigation/Navigation.scss
@@ -38,7 +38,8 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .navigation::-webkit-scrollbar {
